# Pake-Plus

./: .gitignore  README.md  README_CN.md  start.bat
docs/: cli-usage.md  cli-usage_CN.md  clipboard-management_CN.md
latex/: main.tex
newcode/: cache.js  engine.rs  mod.rs  任务D实施计划.md  分工与实现规划.md
src-tauri/: Cargo.toml  pake.json
src-tauri/assets/: clipboard-panel.html  easylist-mini.txt  settings.html
src-tauri/capabilities/: clipboard-panel.json  default.json
src-tauri/permissions/: clipboard.toml  settings.toml
src-tauri/src/: lib.rs  util.rs
src-tauri/src/adblock/: engine.rs  mod.rs  rules.rs
src-tauri/src/app/: config.rs  invoke.rs  mod.rs  setup.rs  window.rs
src-tauri/src/app/clipboard/: cleanup.rs  commands.rs  filter.rs  mod.rs  monitor.rs  panel.rs  settings.rs  source.rs  store.rs
src-tauri/src/app/settings/: commands.rs  diagnostics.rs  io.rs  mod.rs
src-tauri/src/cache/: commands.rs  engine.rs  mod.rs
src-tauri/src/inject/: adblock.js  cache.js  custom.js  settings.js
src-tauri/tests/: adblock_engine.rs
testcode/: README.md  test_adblock.ps1  test_all.ps1  test_cache.ps1  test_settings.ps1  视频录制脚本.md
tests/unit/: adblock-cli.test.ts  base-builder.test.ts  cli-options.test.ts  clipboard-merge.test.ts  clipboard-panel.test.ts  clipboard-permissions.test.ts  clipboard-settings-panel.test.ts
